--- a/src/classes/WaveApplicationDataset.cls
+++ b/src/classes/WaveApplicationDataset.cls
@@ -1,5 +1,7 @@
 global class WaveApplicationDataset {
+    public String Id;
     public String name;
+    public String nameToSave;
     public String label;
     public String jsonSchemaUrl;
     public String csvDataUrl;
